# volcano-base

./: .gitignore  .mise.development.toml  .mise.local.toml  .mise.toml  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  LICENSE  README.md  dprint.jsonc  pyproject.toml  release-please-config.json
.github/release-please/: release-please-config.json
.github/workflows/: release.yml
assets/: examples.py
src/: volcano_base.pyi
src/volcano_base/: __init__.py  config.py  config.pyi  down.pyi  load.pyi
src/volcano_base/down/: __init__.py  cesm2.py  cesm2.pyi  historic_so2.py  historic_so2.pyi  mcg24.py  mcg24.pyi  ob16.py  ob16.pyi
src/volcano_base/load/: __init__.py  load_c2w_files.py  load_c2w_files.pyi  load_historic_so2.py  load_mcg24_files.py  load_mcg24_files.pyi  load_ob16.py  load_ob16.pyi
src/volcano_base/manipulate/: __init__.py  __init__.pyi  time_series.py  time_series.pyi
src/volcano_core/: __init__.py
src/volcano_core/down/: __init__.py  historic_so2.py
src/volcano_core/load/: load_c2w_files.py  load_historic_so2.py
src/volcano_core/manipulate/: __init__.py  time_series.py
